# core

./: Cargo.toml  build.rs  start.sh
assets/: config.cfg  run-electron.sh  run-ui.sh
runner/: Cargo.toml
runner/src/: main.rs
src/: main.rs
src/gsi/: mod.rs
src/logger/: mod.rs
src/setup/: README.md  libraryfolders_model.rs  mod.rs
