[package]
name = "dota-helper-2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
keyvalues-parser = { git = "https://github.com/CosmicHorrorDev/vdf-rs", version = "0.1.0" }
keyvalues-serde = { git = "https://github.com/CosmicHorrorDev/vdf-rs", version = "0.1.0" }
serde = { version = "1.0.190", features = ["derive"] }
tasklist = "0.2.13"
thiserror = "1.0.50"
tokio = { version = "1.33.0", features = ["full"] }
